--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <title>Amisha Durbhatkar </title>
 </head>
 <body>
+<style>
+a:hover{text-decoration:underline;} 
+h1{font-size:30em;font-family:'Helvetica','Arial' ;
+p{font-size:1px solid;} 
+</style>
 <nav><1--for the navbar>
 <ul>
 <li><a href="/">Home</a></li>
